Setup Environment Variables

--- a/content-web/angular.json
+++ b/content-web/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "content-web"
+    }
+  },
+  "defaultProject": "content-web",
+  "cli": {
+    "analytics": "579788ae-ba5a-4e83-a498-30e2c39435b9"
+  }
 }
